--- a/lessons.html
+++ b/lessons.html
@@ -8,7 +8,7 @@
 
         <h3 id="Home">Top Ten Billionaires</h3>
 
-        <h3 id="Jeff Bezos">Jeff Bezos</h3>
+        <h3 id="JeffBezos">Jeff Bezos</h3>
         <p>Born in Albuquerque and raised in Houston and Miami, Bezos graduated from Princeton University in 1986. He holds a degree in electrical engineering and computer science. He worked on Wall Street in a variety of related fields from 1986 to early 1994. Bezos founded Amazon in late 1994, on a cross-country road trip from New York City to Seattle.
         The company began as an online bookstore and has since expanded to a wide variety of other e-commerce products and services, including video and audio streaming, cloud computing, and artificial intelligence. It is currently the world's largest online sales company, the largest Internet company by revenue, and the world's largest provider of virtual assistants and cloud infrastructure services through its Amazon Web Services branch.
         Bezos founded the aerospace manufacturer and sub-orbital spaceflight services company Blue Origin in 2000. Blue Origin's New Shepard vehicle reached space in 2015, and afterwards successfully landed back on Earth. The company completed the first commercial suborbital human spaceflight in July 2021.
@@ -26,7 +26,7 @@
         <p><a href="#Home">Goto Top</a></p>
         <p><a href="chapters.html">Back</a></p>
 
-        <h3 id="Elon Musk">Elon Musk</h3>
+        <h3 id="ElonMusk">Elon Musk</h3>
         <p>Elon Musk is working to revolutionize transportation both on Earth, through electric car maker Tesla -- and in space, via rocket producer SpaceX.
         He owns 23% of Tesla but has pledged more than half his stake as collateral for loans; Forbes has discounted his stake to take the loans into account.
         The Tesla CEO stepped down as chairman in 2018, after making alleged "false statements" about a plan to take Tesla private, triggering an SEC probe.
@@ -35,7 +35,7 @@
         <p><a href="#Home">Goto Top</a></p>
         <p><a href="chapters.html">Back</a></p>
 
-        <h3 id="Bernard Arnault">Bernard Arnault</h3>
+        <h3 id="BernardArnault">Bernard Arnault</h3>
         <p>One of the world's ultimate taste-makers, Bernard Arnault oversees an empire of 70 brands including Louis Vuitton and Sephora.
         In January 2021, LVMH completed a deal for American jeweler Tiffany & Co for $15.8 billion, believed to be the biggest luxury brand acquisition ever.
         LVMH spent $3.2 billion in 2019 for luxury hospitality group, Belmond, which owns or manages 46 hotels, trains and river cruises.
@@ -44,7 +44,7 @@
         <p><a href="#Home">Goto Top</a></p>
         <p><a href="chapters.html">Back</a></p>
 
-        <h3 id="Bill Gates">Bill Gates</h3>
+        <h3 id="BillGates">Bill Gates</h3>
         <p>Bill Gates turned his fortune from software firm Microsoft into a diversified fortune; his focus has shifted to zero-carbon energy investing and philanthropy.
         On May 3, 2021, Bill and Melinda each announced on Twitter they were ending their marriage after 27 years. They will still co-chair the foundation.
         Gates, who cofounded Microsoft with Paul Allen (d. 2018) in 1975, has transferred at least $5.7 billion worth of shares in public companies to Melinda.
@@ -63,7 +63,7 @@
         <p><a href="#Home">Goto Top</a></p>
         <p><a href="#chapters.html">Back</a></p>
 
-        <h3 id="Sergey Brin">Sergey Brin</h3>
+        <h3 id="SergeyBrin">Sergey Brin</h3>
         <p>Sergey Brin stepped down as president of Alphabet, parent company of Google, in December 2019 but remains a controller shareholder and a board member.
         He cofounded Google with Larry Page in 1998 after the two met at Stanford University while studying for advanced degrees in computer science.
         Google went public in 2004 and began trading as Alphabet, a newly created parent company, in 2015.
@@ -72,7 +72,7 @@
         <p><a href="#Home">Goto Top</a></p>
         <p><a href="chapters.html">Back</a></p>
 
-        <h3 id="Mark Zuckerberg">Mark Zuckerberg</h3>
+        <h3 id="MarkZuckerberg">Mark Zuckerberg</h3>
         <p>Facebook, the social network Zuckerberg runs, has been an information hub during the pandemic, but has come under scrutiny for spreading vaccine misinformation.
         In June 2021, a judge dismissed antitrust cases brought by states and the federal government, which could have forced Facebook to sell off Instagram and WhatsApp.
         Zuckerberg started Facebook at Harvard in 2004 at the age of 19 for students to match names with photos of classmates.
@@ -81,7 +81,7 @@
         <p><a href="#Home">Goto Top</a></p>
         <p><a href="chapters.html">Back</a></p>
 
-        <h3 id="Warren Buffett">Warren Buffett</h3>
+        <h3 id="WarrenBuffett">Warren Buffett</h3>
         <p>Known as the "Oracle of Omaha," Warren Buffett is one of the most successful investors of all time.
         Buffett runs Berkshire Hathaway, which owns more than 60 companies, including insurer Geico, battery maker Duracell and restaurant chain Dairy Queen.
         The son of a U.S. congressman, he first bought stock at age 11 and first filed taxes at age 13.
@@ -90,7 +90,7 @@
         <p><a href="#Home">Goto Top</a></p>
         <p><a href="chapters.html">Back</a></p>
         
-        <h3 id="Larry Ellison">Larry Ellison</h3>
+        <h3 id="LarryEllison">Larry Ellison</h3>
         <p>Larry Ellison is chairman, chief technology officer and cofounder of software giant Oracle, of which he owns about 35%.
         He gave up the Oracle CEO role in 2014 after 37 years at the helm.
         Oracle has grown in part through steady acquisitions of software companies, the biggest of which was $9.3 billion for NetSuite in 2016.
@@ -99,7 +99,7 @@
         <p><a href="#Home">Goto Top</a></p>
         <p><a href="chapters.html">Back</a></p>
 
-        <h3 id="Mukesh Ambani">Mukesh Ambani</h3>
+        <h3 id="MukeshAmbani">Mukesh Ambani</h3>
         <p>Mukesh Ambani chairs and runs $74 billion (revenue) Reliance Industries, which has interests in petrochemicals, oil and gas, telecom and retail.
         Reliance was founded by his late father Dhirubhai Ambani, a yarn trader, in 1966 as a small textile manufacturer.
         After his father's death in 2002, Ambani and his younger sibling Anil divvied up the family empire.
