--- a/lessons.html
+++ b/lessons.html
@@ -61,7 +61,7 @@
         Page was CEO until 2001, when Eric Schmidt took over, and then from 2011 until 2015, when he became CEO of Google's new parent company Alphabet.
         He is a founding investor in space exploration company Planetary Resources and is also funding "flying car" startups Kitty Hawk and Opener.</p>
         <p><a href="#Home">Goto Top</a></p>
-        <p><a href="#chapters.html">Back</a></p>
+        <p><a href="chapters.html">Back</a></p>
 
         <h3 id="SergeyBrin">SergeyBrin</h3>
         <p>Sergey Brin stepped down as president of Alphabet, parent company of Google, in December 2019 but remains a controller shareholder and a board member.
